# libsexy

./: Makefile  README.md  libsexy.spec
src/: Makefile.am  Makefile.in  autogen.sh  configure  configure.ac
src/docs/: Makefile.in
src/docs/reference/: Makefile.am  Makefile.in  libsexy-docs.sgml  libsexy-sections.txt  libsexy.types
src/libsexy/: Makefile.am  Makefile.in  gtkspell-iso-codes.c  marshal.list  sexy-enum-types.c  sexy-spell-entry.c  sexy-tooltip.c  sexy-tooltip.h  sexy-tree-view.c  sexy-tree-view.h  sexy-url-label.c  sexy.h
src/tests/: Makefile.am  Makefile.in  test-icon-entry.c  test-spell-entry.c  test-tooltip.c  test-tree-view.c  test-url-label.c
